@@ -12,6 +12,8 @@ eglibc (2.10.2-7) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision 2975 (from glibc-bsd).
   * Update patches/alpha/submitted-sock_nonblock.diff to also fix 
     SOCK_CLOEXEC.  Closes: #569646.
+  * Update patches/hppa/submitted-sock_nonblock.diff to also fix 
+    SOCK_CLOEXEC.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Feb 2010 11:09:45 +0100
 
